# FusionEngine

./: .gitignore  CMakeLists.txt  FusionEngine.sln  README.md
EngineCore/: CMakeLists.txt  EngineCore.vcxproj  EngineCore.vcxproj.filters
EngineCore/API/: EngineAPI.h
EngineCore/Source/: Engine.cpp
EngineCore/Source/Core/: Engine.cpp  dllmain.cpp
EngineCore/Source/ECS/: ComponentManager.h  Entity.h  EntityManager.cpp  EntityManager.h  PositionData.h  System.h  SystemManager.cpp  SystemManager.h
EngineCore/Source/JobSystem/: JobSystem.cpp  JobSystem.h  JobSystem.inl
EngineCore/Source/Logger/: Logger.cpp  Logger.h
Examples/: CMakeLists.txt  DummyMovementSystem.cpp  DummyMovementSystem.h  main.cpp
PongGame/: CMakeLists.txt  PongGame.cpp  PongGame.vcxproj
Tests/: CMakeLists.txt  test_component_manager.cpp  test_entity.cpp  test_system_manager.cpp
